--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,13 @@ body, html{
 #root{
   width: 100%;
   height: 100%;
+  background-color: #fff7df;
 }
 
 .nav{
   position: fixed;
   width: 100%;
-  height: 15%;
-  background-color: rgb(39, 44, 95);
+  height: 60px;
+  background-color: #fff7df;
+  border-bottom: 1px solid #0c162d;
 }
