--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,12 +1,23 @@
-#container_nav{
+#link_nav, #icon_nav{
     position: fixed;
     list-style-type: none;
     top: 0;
-    left: 0;
-    width: 100%;
+    height: 60px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    align-content: center;
+}
+
+#icon_nav{
+    left: 70%;
+    width: 30%;
+    justify-content: flex-end;
+}
+
+#link_nav{
+    left: 0;
+    width: 70%;
     justify-content: flex-start;
 }
 
@@ -14,27 +25,19 @@
 li{
     display: inline;
     font-size: 25px;
-    font-family: Verdana, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
-    margin: 40px;
+    margin: 20px;
 }
 
 
 a:hover{
-    color: firebrick;
-}
-
-
-
-img{
-    transform: scaleX(-1);
-    height: 100px;
-    width: 100px;
+    color: #7e3737;
 }
 
 a{
     text-decoration: none;
     font-size: 25px;
-    font-family: Verdana, Tahoma, sans-serif;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0c162d;
 }
