--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,25 @@ body, html{
 
 #root{
   width: 100%;
-  height: 100%;
+  height: 2000px;
   background-color: #fff7df;
+}
+
+.home{
+    top: 60px;
+    height: 800px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav{
   position: fixed;
   width: 100%;
   height: 60px;
+  z-index: 1;
   background-color: #fff7df;
   border-bottom: 1px solid #0c162d;
 }
