--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,7 +4,7 @@
     top: 0;
     height: 60px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     align-content: center;
 }
