--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,13 @@ body, html{
 
 .home{
     top: 60px;
-    height: 800px;
+    height: 600px;
     width: 100%;
+    flex-direction: column;
+
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
