--- a/src/Home.css
+++ b/src/Home.css
@@ -17,7 +17,7 @@
     margin-top: 0px;
 }
 
-h1 {
+.edo {
     border-top: 50px;
     font-family: 'Arial Black', Times, serif;
     font-size: 2em;
@@ -25,7 +25,7 @@ h1 {
     animation: slideInTitle 3s forwards;
 }
 
-p {
+.content p {
     width: 600px;
     border: 2px solid #2d2b48;
     margin-top: 30px;
