--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body, html{
   background-color: #fff7df;
 }
 
-.home{
+#home{
     top: 60px;
     height: 1000px;
     width: 100%;
@@ -26,7 +26,7 @@ body, html{
     border-bottom: 5px solid #0c162d;;
 }
 
-.nav{
+#nav{
   position: fixed;
   width: 100%;
   height: 60px;
@@ -35,7 +35,7 @@ body, html{
   border-bottom: 1px solid #0c162d;
 }
 
-.proj {
+#proj {
   margin-top: 90px;
   flex-direction: column;
   display: flex;
