--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,8 @@ body, html{
   justify-content: space-evenly;
   align-items: center;
 }
+
+#form {
+  display: flex;
+  justify-content: center;
+}
