--- a/src/form.css
+++ b/src/form.css
@@ -4,8 +4,9 @@
     align-items: center;
 
    
-    border-radius: 5%;
+    border-radius: 6%;
     width: 300px;
+    height: 150px;
     
     background-color: #ddd;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.1);
@@ -19,15 +20,20 @@ form {
 }
 
 
-button {
+.button-form {
     padding: 2px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10%;
+}
+
+button:hover {
+    transform: scale(1.10);
 }
 
 input {
     margin: 10px;
-    
+    padding: 2px;
 }
 
 .container-button {
