--- a/src/navbar.css
+++ b/src/navbar.css
@@ -24,19 +24,39 @@
 
 li{
     display: inline;
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
     margin: 20px;
-}
-
-a:hover{
-    color: #7e3737;
+    cursor: pointer;
 }
 
 a{
-    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
     color: #0c162d;
+    position: relative;
+    transition: color 0.3s;
+}
+
+a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 4px;
+  bottom: -2px;
+  left: 0;
+  background-color: black;
+  border-radius: 15%;
+  transition: transform 0.5s ease;
+  transform-origin: left;
+}
+a:hover::after {
+  transform: scaleX(1);
+}
+
+#login_form_container {
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    z-index: 2;
 }
