--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,21 +1,32 @@
 .ul_con {
-    flex-direction: row;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     list-style: none;
-    display: list-item;
+}
+
+.li_con {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 15px;
 }
 
 .li_con a {
     text-decoration: none;
     color: black;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    margin: 15px;
 }
 
 .icon_con {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 1px;
+}
+
+.li_con span {
+    font-size: 25px;
+    text-align: center;
 }
