--- a/src/Card.css
+++ b/src/Card.css
@@ -1,3 +1,10 @@
+.img-card {
+  margin-top: 10px;
+  border-radius: 12%;
+  border: 1px solid black;
+}
+
+
 .card {
   width: 200px;
   border: 1px solid #ccc;
