--- a/src/Contact.css
+++ b/src/Contact.css
@@ -6,6 +6,8 @@
 }
 
 .li_con {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
