--- a/src/Project.css
+++ b/src/Project.css
@@ -5,6 +5,11 @@
     align-items: center;
 }
 
+.cards a {
+    text-decoration: none;
+    color: black;
+}
+
 .top-cards, .bottom-cards{
     display: flex;
     justify-content: center;
