Create pagina progetto singolo

--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,13 @@ body, html{
 
 #root{
   width: 100%;
-  height: 2150px;
   background-color: #fff7df;
-}
-
-#nav{
-  position: fixed;
-  width: 100%;
-  height: 60px;
-  z-index: 1;
-  background-color: #fff7df;
-  border-bottom: 1px solid #0c162d;
 }
 
 #home{
     top: 60px;
-    height: 1000px;
-    width: 100%;
-    flex-direction: column;
+    height: 1000px; /*Qui devo rivedere*/
+    flex-direction: column; 
 
     position: relative;
     display: flex;
@@ -41,8 +30,9 @@ body, html{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-bottom: 50px;
   border-bottom: 5px solid #0c162d;
+  margin-bottom: 50px;
+  padding-bottom: 60px;
 }
 
 #form {
@@ -56,4 +46,5 @@ body, html{
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 60px;
 }
