--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,8 +1,12 @@
 #link_nav, #icon_nav{
     position: fixed;
-    list-style-type: none;
     top: 0;
+    width: 100%;
     height: 60px;
+    z-index: 1;
+    background-color: #fff7df;
+    border-bottom: 1px solid #0c162d;
+    list-style-type: none;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
