--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -33,7 +33,7 @@
     margin-top: 45px;
     padding: 0px 30px;
     padding-bottom: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'roboto';
     font-size: 1em;
     animation: slideInP 4s forwards;
 }
